--- a/rescu_front_end/pubspec.yaml
+++ b/rescu_front_end/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.6
+  sqflite: ^2.0.0+4
+  path_provider: ^2.0.8
 
   english_words: ^4.0.0
   provider: ^6.1.2
